--- a/style.css
+++ b/style.css
@@ -106,10 +106,12 @@ body{
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   flex-wrap: wrap;
-  border-radius: 1rem;
+  border-radius: 2rem;
+  padding: 1rem;
 }
 img {
-  border-radius: 3rem;
+  width: 400px;
+  height: 300px;
 }
 :not(.logo){
   border-radius: 0rem;
