--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body{
 }
 .menu ul {
   overflow: hidden;
-  background-color: #33f3;
+  background-image: linear-gradient(to top, rgba(25, 69, 179, 0), rgb(2, 42, 91));
   align-content: center;
   display: flex;
   nav-left: auto;
@@ -106,7 +106,7 @@ body{
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   flex-wrap: wrap;
-  border-radius: 2rem;
+  border-radius: 3rem;
   padding: 1rem;
 }
 img {
@@ -133,4 +133,5 @@ img {
   padding: 2rem;
   align-items: center;
   align-self: center;
+  background-image: linear-gradient(to top, rgba(25, 69, 179, 0), rgb(2, 42, 91));
 }
